# Smart-Music

./: CMakeLists.txt  README.md
android/SmartMusic/: AndroidManifest.xml
android/SmartMusic/res/layout/: activity_main.xml
android/SmartMusic/res/xml/: device_filter.xml
android/SmartMusic/src/com/smartmusic/udpconnection/: Client.java
app/android/SmartMusic/res/values/: strings.xml
app/android/SmartMusic/src/com/example/smartmusic/: MainActivity.java
app/linux-bash/: deb.mid.1.2  play  play2  play2~  play~
app/linux/src/: ByteReader.cpp  Midi.cpp  MidiFileDecoder.cpp  MidiTrackDecoder.cpp  Network.cpp  io.c  smartMusic.c  smartMusic.cpp
app/linux/src/include/: ByteReader.h  Midi.h  MidiFileDecoder.h  MidiTrackDecoder.h  Network.h  global.h  global.h~
app/linux/test/: test_midi.cpp
app/server/java/udpclient/: MidiPlayer.java  UDPClient.java
app/server/java/udpclient2/: UDPClient.java
application/players/java/network_player/udpclient/: UDPClient.java
application/server/posix/src/: Midi.cpp  MidiTrackDecoder.cpp  MidiTrackReader.cpp  smartMusic.cpp
application/server/posix/src/include/: ByteReader.h  Midi.h  MidiFileDecoder.h  MidiTrackDecoder.h  MidiTrackReader.h  global.h
application/server/posix/test/: test_midi.cpp
driver/linux/: usb-skeleton.c
drivers/linux/: Makefile
